// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyWithResults component shows ResultsSorter without genre 1`] = `
<section
  className="results"
>
  <ResultsSorter
    moviesCount={2}
  />
  
</section>
`;

exports[`BodyWithResults component works as expected 1`] = `
<section
  className="results"
>
  <ResultsDescription
    genre="Fiction"
  />
  
</section>
`;
